# jcus.link.mcp

./: .gitignore  AGENTS.md  Dockerfile  Makefile  PROJECT_STRUCTURE.md  README.md  client.py  main.py  pyproject.toml  pyrightconfig.json  python_client.py  python_client_2.py  requirements-dev.txt  requirements.txt  run_server.py  server.py  server2.py  setup.sh
.cursor/rules/: cursor-rules.mdc  self-improve.mdc  tech-stack.mdc
.github/workflows/: docker-build.yml
docs/: ARCHITECTURE.md  FASTMCP_MIGRATION.md  MAKEFILE_GUIDE.md  MIGRATION_GUIDE.md  PROJECT_AUDIT.md  PROJECT_STRUCTURE.md  QUICK_START.md  REFACTORING_SUMMARY.md  TRANSPORT_EXPLANATION.md  TYPE_IGNORE_EXPLANATION.md
examples/: HTTP_CLIENT_GUIDE.md  README.md  curl_example.sh  curl_request.sh  http_request.sh  python_client.py  typescript_client.ts  typescript_client_simple.ts
markdown_docs/: QUICK_REFERENCE_CARD.md
src/: __init__.py  config.py  main.py  main_fastmcp.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  exceptions.py  resume_cache.py  vector_database.py
src/handers/: __init__.py  http_handler.py  mcp_handler.py
src/models/: __init__.py  domain_models.py  mcp_models.py
src/schemas/: __init__.py  domain_schema.py  mcp_schema.py
src/services/: __init__.py  document_parser.py  embedding_service.py  llm_service.py  profile_service.py  resume_service.py  vector_service.py
src/tools/: __init__.py  analysis_tool.py  base.py  generation_tool.py  search_tool.py
src/utils/: __init__.py  document_parser.py  helper.py
tests/: __init__.py  conftest.py  test_resume_service.py
tests/test_services/: __init__.py
